--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +49,6 @@
     "esbuild": "^0.24.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
-  }
+  },
+  "homepage": "http://www.saminglese.com/c856-project/"
 }
