--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,10 +41,6 @@
     ]
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.3.0",
-    "@aws-amplify/backend-cli": "^1.2.8",
-    "aws-cdk": "^2.160.0",
-    "aws-cdk-lib": "^2.160.0",
     "constructs": "^10.3.0",
     "esbuild": "^0.24.0",
     "tsx": "^4.19.1",
