--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "constructs": "^10.3.0",
     "esbuild": "^0.24.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "4.0.0"
   },
   "homepage": "http://www.saminglese.com/c856-project/"
 }
